--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.1",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^3.0.0",
+    "identicon.js": "^2.3.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "serve": "^11.3.2",
+    "web-vitals": "^1.1.2",
+    "web3": "^1.3.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve build",
+    "devStart": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "openzeppelin-solidity": "^4.1.0"
   }
 }
